--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,8 @@
       "@pages/*":["src/pages/*"],
       "@hooks/*":["src/hooks/*"],
       "@context/*":["src/context/*"],
+      "@redux/*":["src/redux/*"],
+      "@services/*":["src/services/*"],
     }
   }
 }
