--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fontsource-variable/public-sans": "^5.2.5",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@reduxjs/toolkit": "^2.6.1",
     "lodash": "^4.17.21",
     "mui-one-time-password-input": "^4.0.1",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
